fix: Zoom of the shift plan

--- a/assets/tailwind.css
+++ b/assets/tailwind.css
@@ -1628,21 +1628,15 @@ video {
 }
 
 .scale-down-50 {
-  transform-origin: top left;
-  transform: scale(0.50);
-  transition: transform 0.25s ease;
+  zoom: 0.50;
 }
 
 .scale-down-75 {
-  transform-origin: top left;
-  transform: scale(0.75);
-  transition: transform 0.25s ease;
+  zoom: 0.75;
 }
 
 .scale-down-100 {
-  transform-origin: top left;
-  transform: scale(1.0);
-  transition: transform 0.25s ease;
+  zoom: 1.0;
 }
 
 .hover\:border-blue-300:hover {
